--- a/M2/zad5/package.json
+++ b/M2/zad5/package.json
@@ -4,6 +4,7 @@
   "description": "prezentacja dla ecp4u",
   "main": "index.js",
   "scripts": {
+    "start": "http-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -21,6 +22,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-uglify": "^3.0.0",
+    "http-server": "^0.10.0",
     "jquery": "^3.2.1"
   },
   "dependencies": {
