--- a/M2/zad6/package.json
+++ b/M2/zad6/package.json
@@ -4,11 +4,15 @@
   "description": "prezentacja dla ecp4u",
   "main": "index.js",
   "scripts": {
+    "start": "babel script.js --watch --out-file script-compiled.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-latest": "^6.24.1",
     "bootstrap": "^3.3.7",
     "browser-sync": "^2.18.13",
     "gulp": "^3.9.1",
@@ -24,6 +28,9 @@
     "jquery": "^3.2.1"
   },
   "dependencies": {
-    "babel-standalone": "^6.26.0"
+    "babel-preset-react": "^6.24.1",
+    "babel-standalone": "^6.26.0",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0"
   }
 }
