--- a/M5/zad2/package.json
+++ b/M5/zad2/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zad1",
+  "name": "zad2",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -13,5 +13,9 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2"
+  },
+  "devDependencies": {
+    "express": "^4.16.2",
+    "nodemon": "^1.12.1"
   }
 }
