--- a/M5/zad5/package.json
+++ b/M5/zad5/package.json
@@ -11,13 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.18.2",
-    "express": "^4.16.2",
-    "passport": "^0.4.0",
-    "passport-google-oauth": "^1.0.0",
-    "pug": "^2.0.0-rc.4"
+    "nodemon": "^1.12.1",
+    "passport": "^0.4.0"
   },
   "devDependencies": {
-    "nodemon": "^1.12.1"
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2",
+    "passport-google-oauth": "^1.0.0",
+    "pug": "^2.0.0-rc.4"
   }
 }
