--- a/M5/zad5/package.json
+++ b/M5/zad5/package.json
@@ -1,23 +1,23 @@
 {
-  "name": "zad1",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "nodemon": "^1.12.1",
-    "passport": "^0.4.0"
-  },
-  "devDependencies": {
-    "body-parser": "^1.18.2",
-    "express": "^4.16.2",
-    "passport-google-oauth": "^1.0.0",
-    "pug": "^2.0.0-rc.4"
-  }
+    "name": "zad1",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "start": "nodemon server.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "body-parser": "^1.18.2",
+        "express": "^4.16.2",
+        "passport": "^0.4.0",
+        "passport-google-oauth": "^1.0.0"
+    },
+    "devDependencies": {
+        "nodemon": "^1.12.1",
+        "pug": "^2.0.0-rc.4"
+    }
 }
